tests/NormalTests/paczka2/big_fuzzy/29845605.err
Error in line 5: uyIak9v6syR S347 42,2
Error in line 9: PF10u S347 16,9
Error in line 24: uyIak9v6syR S347 9,5
Error in line 27: WXiOiyyvU S347 22,9
Error in line 32: WXiOiyyvU S894 32,6
Error in line 31: m2LZrzbHbRM A535 62,1
Error in line 20: PF10u S894 42,0
Error in line 44: o0gfWP7n A412 51,6
Error in line 69: WXiOiyyvU A412 12,7
Error in line 68: uyIak9v6syR A412 50,1
Error in line 77: WXiOiyyvU A412 5,c
Error in line 37: S894 S894 168,7
Error in line 84: PF10u S894 85,8
Error in line 73: SRO4rWTE67 S894 202,5
Error in line 96: o0gfWP7n A535 61,1
Error in line 103: o0gfWP7n S894 4,5
Error in line 81: WXiOiyyvU A412 17,8
Error in line 107: WXiOiyyvU S347 80,0
Error in line 108: WXiOiyyvU S894 37,7
Error in line 104: S894 A535 47,2
Error in line 111: PF10u A412 71,4
Error in line 116: PF10u S894 -1,6
Error in line 119: WXiOiyyvU A535 32,0
Error in line 121: WXiOiyyvU S894 78,6
Error in line 102: uyIak9v6syR A412 71,8
Error in line 123: WXiOiyyvU S347 29,2
Error in line 120: PF10u S894 52,5
Error in line 131: m2LZrzbHbRM S894 70,2
Error in line 140: S894 A412 79,0
Error in line 142: S894 S347 12,0
Error in line 130: WXiOiyyvU A535 28,6
Error in line 148: WXiOiyyvU S347 93,5
Error in line 152: m2LZrzbHbRM A412 19,5
Error in line 149: WXiOiyyvU S894 3,1
Error in line 155: o0gfWP7n S347 51,83
Error in line 159: o0gfWP7n S347 171,3
Error in line 154: WXiOiyyvU A535 4,1
Error in line 164: WXiOiyyvU S347 14,2
Error in line 163: o0gfWP7n A412 46,0
Error in line 169: o0gfWP7n A535 -2,5
Error in line 166: WXiOiyyvU S894 33,6
Error in line 167: uyIak9v6syR A412 16,3
Error in line 176: m2LZrzbHbRM S347 16,8
Error in line 179: WXiOiyyvU S347 -1,1
Error in line 168: o0gfWP7n A535 50,3
Error in line 170: WXiOiyyvU S347 91,1
Error in line 196: uyIak9v6syR A535 98,5
Error in line 194: WXiOiyyvU S894 21,4
Error in line 195: o0gfWP7n S347 41,5
Error in line 206: m2LZrzbHbRM A412 88,5
Error in line 227: m2LZrzbHbRM S347 32,9
Error in line 228: m2LZrzbHbRM S357 99,7
